main window layout

--- a/ImageOperator/Views/MainWindow.axaml
+++ b/ImageOperator/Views/MainWindow.axaml
@@ -8,13 +8,88 @@
         x:DataType="vm:MainWindowViewModel"
         Icon="/Assets/avalonia-logo.ico"
         Title="ImageOperator">
+    <Grid Margin="3" RowDefinitions="Auto,*,Auto">
+        <Menu Grid.Row="0">
+            <MenuItem Header="_File">
+                <MenuItem x:Name="FileOpenLayout" Header="_Open layout..." />
+                <Separator />
+                <MenuItem x:Name="FileSaveLayout" Header="_Save layout..." />
+                <Separator />
+                <MenuItem x:Name="FileCloseLayout" Header="_Close layout" />
+            </MenuItem>
+        </Menu>
+        <DockControl x:Name="Dock" Grid.Row="1" InitializeLayout="True" InitializeFactory="True">
+            <DockControl.Factory>
+                <Factory />
+            </DockControl.Factory>
+            <RootDock x:Name="Root" Id="Root" IsCollapsable="False" DefaultDockable="{Binding #MainLayout}">
 
-    <Design.DataContext>
-        <!-- This only sets the DataContext for the previewer in an IDE,
-             to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
-        <vm:MainWindowViewModel/>
-    </Design.DataContext>
+                <ProportionalDock x:Name="MainLayout" Id="MainLayout" Orientation="Horizontal">
 
-    <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    <!-- Left Pane -->
 
+                    <ToolDock x:Name="LeftPane" Id="LeftPane" Proportion="0.2" Alignment="Left">
+                        <Tool x:Name="ToolBox" Id="ToolBox" Title="ToolBox">
+
+                        </Tool>
+                    </ToolDock>
+
+                    <ProportionalDockSplitter x:Name="LeftSplitter" Id="LeftSplitter" />
+                    <!-- Top Pane -->
+
+                    <ProportionalDock x:Name="TopPane" Id="TopPane" Orientation="Vertical">
+
+                        <!-- Right Pane -->
+
+                        <ProportionalDock x:Name="RightPane" Id="RightPane" Orientation="Horizontal">
+
+                            <!-- Documents Pane -->
+
+                            <DocumentDock x:Name="DocumentsPane" Id="DocumentsPane" CanCreateDocument="True" ActiveDockable="Document1">
+                                <DocumentDock.DocumentTemplate>
+                                    <DocumentTemplate>
+                                        <StackPanel x:DataType="Document">
+                                            <TextBlock Text="Title" />
+                                            <TextBox Text="{Binding Title}" />
+                                            <TextBlock Text="Context" />
+                                            <TextBox Text="{Binding Context}" />
+                                        </StackPanel>
+                                    </DocumentTemplate>
+                                </DocumentDock.DocumentTemplate>
+                                <Document x:Name="Document1" Id="Document1" Title="Program.cs" x:DataType="Document">
+                                    <TextBlock Text="{Binding Title}" />
+                                </Document>
+                            </DocumentDock>
+
+                            <ProportionalDockSplitter x:Name="RightSplitter" Id="RightSplitter" />
+
+                            <!-- Properties Pane -->
+                            <ToolDock x:Name="PropertiesPane" Id="PropertiesPane" Proportion="0.3" Alignment="Right">
+                                <Tool x:Name="Properties" Id="Properties" Title="Properties" x:DataType="Tool">
+
+                                </Tool>
+                            </ToolDock>
+
+                        </ProportionalDock>
+
+                        <ProportionalDockSplitter x:Name="BottomSplitter" Id="BottomSplitter" />
+
+                        <!-- Bottom Pane -->
+
+                        <ToolDock x:Name="BottomPane" Id="BottomPane" Proportion="0.3" Alignment="Bottom" ActiveDockable="LogTool">
+                            <Tool x:Name="LogTool" Id="LogTool" Title="LogTool" x:DataType="Tool">
+                                <TextBlock Text="{Binding Title}" />
+                            </Tool>
+                            <Tool x:Name="ErrorList" Id="ErrorList" Title="Error List" x:DataType="Tool">
+                                <TextBlock Text="{Binding Title}" />
+                            </Tool>
+                        </ToolDock>
+
+                    </ProportionalDock>
+
+                </ProportionalDock>
+            </RootDock>
+
+        </DockControl>
+    </Grid>
 </Window>
