--- a/ImageOperator/App.axaml
+++ b/ImageOperator/App.axaml
@@ -2,14 +2,26 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="ImageOperator.App"
              xmlns:local="using:ImageOperator"
+             xmlns:ids="using:Dock.Settings"
+             xmlns:idc="using:Dock.Avalonia.Controls"
+             xmlns:idcr="using:Dock.Avalonia.Controls.Recycling"
              RequestedThemeVariant="Default">
     <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
 
     <Application.DataTemplates>
         <local:ViewLocator />
     </Application.DataTemplates>
+    <Application.Resources>
+        <idcr:ControlRecycling x:Key="ControlRecyclingKey" TryToUseIdAsKey="True" />
+        <Color x:Key="RegionColor">Transparent</Color>
+    </Application.Resources>
+
 
     <Application.Styles>
         <FluentTheme />
+        <StyleInclude Source="avares://Dock.Avalonia/Themes/DockFluentTheme.axaml" />
+        <Style Selector="idc|DockControl">
+            <Setter Property="(ids:DockProperties.ControlRecycling)" Value="{StaticResource ControlRecyclingKey}" />
+        </Style>
     </Application.Styles>
 </Application>
